# 4pane

./: 4Pane.appdata.xml  Accelerators.cpp  Accelerators.h  Archive.cpp  Archive.h  ArchiveStream.cpp  ArchiveStream.h  Bookmarks.cpp  Bookmarks.h  Configure.cpp  Configure.h  Devices.cpp  Devices.h  Dup.cpp  Dup.h  ExecuteInDialog.cpp  ExecuteInDialog.h  Externs.h  Filetypes.cpp  Filetypes.h  INSTALL  LICENCE  Makefile.am  Makefile.in  Misc.cpp  Misc.h  Mounts.cpp  Mounts.h  MyDirs.cpp  MyDirs.h  MyDragImage.cpp  MyDragImage.h  MyFiles.cpp  MyFiles.h  MyFrame.cpp  MyFrame.h  MyGenericDirCtrl.cpp  MyGenericDirCtrl.h  MyNotebook.cpp  MyNotebook.h  (+16 more)
bitmaps/: 4PaneIcon16.xpm  4PaneIcon32.xpm  4PaneIcon40x32.xpm  4PaneIcon48.xpm  MyDocuments.xpm  UsbMem.xpm  UsbMulticard.xpm  UsbPen.xpm  bm1_button.xpm  bm2_button.xpm  bm3_button.xpm  cdr.xpm  cdrom.xpm  clear_right.xpm  connect_no.xpm  dir_up.xpm  down.xpm  floppy.xpm  gedit.xpm  gohome.xpm  harddisk-usb.xpm  harddisk.xpm  kedit.xpm  kwrite.xpm  largedropdown.xpm  new_dir.xpm  smalldropdown.xpm  toparent.xpm  unknown.xpm
bitmaps/include/: 4PaneIcon32.xpm  ClosedFolder.xpm  GhostClosedFolder.xpm  GhostCompressedFile.xpm  GhostCompressedTar.xpm  GhostFile.xpm  GhostOpenFolder.xpm  GhostTarball.xpm  LockedFolder.xpm  SymlinkToFolder.xpm  UnknownFile.xpm  UnknownFolder.xpm  archive.xpm  blockdevice.xpm  bookmark.xpm  chardevice.xpm  columnheaderdown.xpm  columnheaderup.xpm  compressedfile.xpm  compressedtar.xpm  copy.xpm  cut.xpm  fulltree.xpm  paste.xpm  pipe.xpm  redo.xpm  separator.xpm  symlink.xpm  symlinkbroken.xpm  tarball.xpm  undo.xpm  up.xpm  usb.xpm  wizardbitmap.xpm
doc/: About.htm  Archive.htm  ArchiveBrowse.htm  Bookmarks.htm  Chapt.con  Chapt.hhc  Chapt.hhp  Configure.htm  ConfigureUserDefTools.htm  ConfiguringDevices.htm  ConfiguringDisplay.htm  ConfiguringMisc.htm  ConfiguringNetworks.htm  ConfiguringShortcuts.htm  ConfiguringTerminals.htm  Contents.htm  ContextMenu.htm  Devices.htm  Display.htm  DnD.htm  Edit.htm  Editors.htm  Export.htm  FAQ.htm  Features.htm  FileviewCols.htm  Filter.htm  Introduction.htm  KeyboardNavigation.htm  Licence.htm  Menu.htm  Mount.htm  MultipleRenDup.htm  Open.htm  OpenWith.htm  Options.htm  Previews.htm  Properties.htm  Quickstart.htm  RAQ.htm  (+10 more)
locale/: 4Pane.pot  Makefile.am  Makefile.in  README.translators
locale/ar/LC_MESSAGES/: ar.po
locale/ca/LC_MESSAGES/: ca.po
locale/da/LC_MESSAGES/: da.po
locale/de/LC_MESSAGES/: de.po
locale/el/LC_MESSAGES/: el.po
locale/es/LC_MESSAGES/: es.po
locale/et/LC_MESSAGES/: et.po
locale/fa/LC_MESSAGES/: fa.po
locale/fi_FI/LC_MESSAGES/: fi_FI.po
locale/fr/LC_MESSAGES/: fr.po
locale/fr_FR/LC_MESSAGES/: fr_FR.po
locale/it/LC_MESSAGES/: it.po
locale/ja/LC_MESSAGES/: ja.po
locale/nl/LC_MESSAGES/: nl.po
locale/pl/LC_MESSAGES/: pl.po
locale/pt_BR/LC_MESSAGES/: pt_BR.po
locale/ru/LC_MESSAGES/: ru.po
locale/tr/LC_MESSAGES/: tr.po
locale/uk_UA/LC_MESSAGES/: uk_UA.po
locale/vi/LC_MESSAGES/: vi.po
locale/zh/LC_MESSAGES/: zh.po
locale/zh_CN/LC_MESSAGES/: zh_CN.po
locale/zh_TW/LC_MESSAGES/: zh_TW.po
rc/: 4Pane.desktop  configuredialogs.wxcp  configuredialogs.xrc  dialogs.wxcp  dialogs.xrc  moredialogs.wxcp  moredialogs.xrc
